# skillhub

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
cli/: README.md
config/: default.toml
crates/skillhub-app/: Cargo.toml
crates/skillhub-app/src/: error.rs  main.rs  middleware.rs  state.rs
crates/skillhub-app/src/api/: admin.rs  auth.rs  authz.rs  clawhub.rs  collaborators.rs  compat.rs  duplicate.rs  iterations.rs  meta.rs  mod.rs  namespaces.rs  orgs.rs  proposals.rs  reviews.rs  search.rs  skills.rs  tokens.rs  users.rs  versions.rs
crates/skillhub-app/src/middleware/: principal.rs  scope.rs
crates/skillhub-auth/: Cargo.toml
crates/skillhub-auth/src/: jwt.rs  lib.rs  oauth.rs  password.rs  policy.rs  principal.rs  rbac.rs  token.rs
crates/skillhub-domain/: Cargo.toml
crates/skillhub-domain/src/: activity.rs  audit.rs  collaborator.rs  department.rs  embedding.rs  error.rs  iteration.rs  lib.rs  namespace.rs  proposal.rs  review.rs  skill.rs  token.rs  user.rs
crates/skillhub-embeddings/: Cargo.toml
crates/skillhub-embeddings/src/: http.rs  lib.rs  normalize.rs  stub.rs
crates/skillhub-harness/: Cargo.toml
crates/skillhub-harness/src/: lib.rs  sandbox.rs
crates/skillhub-infra/: Cargo.toml
crates/skillhub-infra/src/: cache.rs  config.rs  db.rs  lib.rs  repo.rs
crates/skillhub-infra/src/repo/: activity_repo.rs  audit_repo.rs  collaborator_repo.rs  department_repo.rs  embedding_repo.rs  iteration_repo.rs  namespace_repo.rs  proposal_repo.rs  review_repo.rs  skill_repo.rs  token_repo.rs  user_repo.rs
crates/skillhub-notification/: Cargo.toml
crates/skillhub-notification/src/: lib.rs
crates/skillhub-search/: Cargo.toml
crates/skillhub-search/src/: duplicate.rs  lib.rs  pg_search.rs
crates/skillhub-storage/: Cargo.toml
crates/skillhub-storage/src/: lib.rs  local.rs  policy.rs  s3.rs
docs/: agent-guide.md  architecture.md  design.md  e2e-report.md  showcase.md
migrations/: 20260514000001_init.sql  20260514000002_pgvector.sql  20260514000003_org_departments.sql  20260514000004_collaborators.sql  20260514000005_versioning.sql  20260514000006_harness_activity.sql  20260514000007_skill_readme.sql
scripts/: seed.sh  seed.sql
skill/skillhub/: SKILL.md
web/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: main.tsx  router.tsx  styles.css
web/src/components/: Layout.tsx
web/src/components/ambient/: AmbientBackdrop.tsx  ParticleField.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  LocaleToggle.tsx  Meter.tsx  Motion.tsx  PageHeader.tsx  Stepper.tsx  ThemeToggle.tsx
web/src/i18n/: dict.ts  index.tsx
web/src/lib/: api.ts  theme.tsx
web/src/routes/: audit.tsx  dashboard.tsx  grants.tsx  orgs.tsx  skill-detail.tsx  skills-new.tsx  skills.tsx  tokens.tsx
