[workspace]
resolver = "2"
members = [
    "crates/skillhub-app",
    "crates/skillhub-domain",
    "crates/skillhub-auth",
    "crates/skillhub-search",
    "crates/skillhub-storage",
    "crates/skillhub-infra",
    "crates/skillhub-notification",
    "crates/skillhub-embeddings",
    "crates/skillhub-harness",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/wjsoj/skillhub"
authors = ["SkillHub Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP / Web
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "fs", "limit"] }
hyper = "1.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Storage (S3 / MinIO)
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.50"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
oauth2 = "4.4"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# Errors & logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
config = "0.14"
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
semver = { version = "1", features = ["serde"] }
url = { version = "2", features = ["serde"] }
bytes = "1"
futures = "0.3"
mime = "0.3"
zip = "2"

# Observability
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
opentelemetry = "0.26"

# Testing
tokio-test = "0.4"
mockall = "0.13"

# Internal crates
skillhub-domain = { path = "crates/skillhub-domain" }
skillhub-auth = { path = "crates/skillhub-auth" }
skillhub-search = { path = "crates/skillhub-search" }
skillhub-storage = { path = "crates/skillhub-storage" }
skillhub-infra = { path = "crates/skillhub-infra" }
skillhub-notification = { path = "crates/skillhub-notification" }
skillhub-embeddings = { path = "crates/skillhub-embeddings" }
skillhub-harness = { path = "crates/skillhub-harness" }

# Slim release binary: strip every debug section, fat LTO, single
# codegen unit, abort-on-panic to drop the unwind tables, and trim
# std panic messages. Typical savings: 40–60% over the default release.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false
overflow-checks = false
debug = false
debug-assertions = false

# Faster iterative dev builds — no debug info weight.
[profile.dev]
opt-level = 0
debug = "line-tables-only"
incremental = true

# A reasonable middle ground for `cargo run --profile=quick`.
[profile.quick]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16
strip = "debuginfo"
panic = "unwind"
