[package]
name = "skillhub-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skillhub-domain.workspace = true
skillhub-infra.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

jsonwebtoken.workspace = true
argon2.workspace = true
oauth2.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
url.workspace = true
