[package]
name = "skillhub-domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
semver.workspace = true
validator.workspace = true
async-trait.workspace = true
url.workspace = true
