[package]
name = "skillhub-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
sha2.workspace = true
base64.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
