[package]
name = "skillhub-notification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skillhub-domain.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
