[package]
name = "skillhub-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skillhub-domain.workspace = true
skillhub-infra.workspace = true
skillhub-embeddings = { path = "../skillhub-embeddings" }
skillhub-auth = { path = "../skillhub-auth" }

tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
