[package]
name = "skillhub-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skillhub-domain.workspace = true

tokio = { workspace = true, features = ["fs", "io-util"] }
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
futures.workspace = true
sha2.workspace = true
base64.workspace = true
mime.workspace = true
zip.workspace = true

aws-config.workspace = true
aws-sdk-s3.workspace = true
